[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["graflow", "graflow.*"]
exclude = ["graflow.tests", "graflow.tests.*"]

[project]
name = "django-graflow"
version = "0.2.0"
description = "Django app for building long-running, interactive, and stateful AI workflows using LangGraph"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Ali Abbasi" }
]
keywords = ["django", "langgraph", "langchain", "rest-api", "flows"]
dependencies = [
    "Django>=5.2,<7.0",
    "djangorestframework>=3.15,<4.0",
    "django-extensions>=4.1,<5.0",
    "drf-spectacular>=0.29.0,<1.0",
    "langgraph>=1.0.5,<1.0.9",
    "langgraph-checkpoint-postgres>=3.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0",
    "orjson>=3.11.5",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.3.0"]
dev = [
    "coverage[toml]>=7.13.0",
    "build>=1.3.0",
    "factory-boy>=3.3.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
    "pytest-django>=4.11.0",
    "black>=25.12.0",
    "ruff>=0.14.9",
    "mypy>=1.19.0",
    "django-stubs[compatible]>=5.2.8",
    "types-orjson>=3.6",
]

[project.urls]
Homepage = "https://github.com/ulern-com/graflow-django"
Source = "https://github.com/ulern-com/graflow-django"
Issues = "https://github.com/ulern-com/graflow-django/issues"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["graflow", "myflows"]
branch = true
omit = ["graflow/tests/*", "myflows/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["B", "UP", "C4"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict_optional = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "myflows.settings"

